deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incidents-deployment-front
  labels:
    app: incidents-front
spec:
  selector:
    matchLabels:
      app: incidents-front
  template:
    metadata:
      labels:
        app: incidents-front
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: incidents-front
          image: ghcr.io/chazapp/incidents-front:1.0.4-arm
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health/
              port: 3000
      imagePullSecrets:
        - name: ghcr-creds

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incidents-deployment-api
  labels:
    app: incidents-api
spec:
  selector:
    matchLabels:
      app: incidents-api
  template:
    metadata:
      labels:
        app: incidents-api
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: incidents-api
          image: ghcr.io/chazapp/incidents-api:1.0.7-arm
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
              scheme: HTTP
              httpHeaders:
                - name: Host
                  value: incidents-api.chaz.pro
      imagePullSecrets:
        - name: ghcr-creds

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incidents-deployment-db
  labels:
    app: incidents-db
spec:
  selector:
    matchLabels:
      app: incidents-db
  template:
    metadata:
      labels:
        app: incidents-db
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: postgres
          image: postgres:14.0-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 2
            periodSeconds: 2
            timeoutSeconds: 1
          volumeMounts:
            - name: incidents-db-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: incidents-db-data
          persistentVolumeClaim:
            claimName: incidents-db-pvc
